kubernetes/arisu/apps/prismarine/prismarine-client/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: prismarine-client
spec:
  podSelector: {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              k8s.kashall.dev/controller: "true"
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - "10.0.0.0/8"
  ingress:
    - from:
        - podSelector: {}
        - ipBlock:
            cidr: "0.0.0.0/0"
  policyTypes:
    - Ingress
    - Egress
